# hmac-serialiser

./: README.md
.github/: dependabot.yml
.github/workflows/: dotnet.yml  dotnet_test.yml  rust_test.yml
csharp/: README.md
csharp/src/: HMACSerialiser.csproj  HMACSerialiser.sln  ISerialiser.cs  JSONPayload.cs
csharp/src/Base64Encoders/: URLSafeBase64Encoder.cs
csharp/tests/Base64EncoderTests/: Base64EncoderTests.csproj  Base64Tests.cs
csharp/tests/HKDFTests/: BaseTestClass.cs  HKDFTests.csproj  RandomKeyTests.cs
csharp/tests/HMACTests/: BaseTestClass.cs  HMACOutputs.txt  HMACTests.csproj  InvalidSignatureTests.cs  JSONPayloadTests.cs  Serialisers.cs  TimeBasedSignatureTests.cs  ValidSignatureTests.cs
rust/: .gitignore  Cargo.toml  README.md
rust/src/: algorithm.rs  errors.rs  hkdf.rs  lib.rs
rust/tests/: hkdf_random.rs  hmac_random.rs
src/: HMACHelper.cs  HMACSerialiser - Backup (1).csproj  HMACSerialiser - Backup.csproj  HMACSerialiser.csproj  HMACSerialiser.sln  ISerialiser.cs  ITimedSerialiser.cs  JSONPayload.cs  Serialiser.cs  TimedSerialiser.cs  TimedURLSafeSerialiser.cs  URLSafeSerialiser.cs
src/Base64Encoders/: Base64Encoder.cs  Padding.cs  URLSafeBase64Encoder.cs
src/Errors/: BadTokenException.cs
src/HMAC/: HMACHelper.cs
src/KFD/: HKDF.cs
tests/Base64EncoderTests/: URLSafeBase64.cs
tests/HKDFTests/: BaseTestClass.cs  BigKeyTests.cs  HKDFAssertions.cs  HKDFTests.csproj  RandomKeyTests.cs  SmallKeyTests.cs
tests/HMACTests/: BaseTestClass.cs  HMACReference.py  HMACTests.csproj  InvalidSignatureTests.cs  JSONPayloadTests.cs  Serialisers.cs  TimeBasedSignatureTests.cs  URLSafeSignatureTests.cs  ValidSignatureTests.cs
