[package]
name = "hmac-serialiser"
version = "0.2.0"
description = "HMAC Serialisers to cryptographically sign data like Python's ItsDangerous library but in rust."
authors = [
    "KJHJason <contact@kjhjason.com>",
]
keywords = ["hmac", "itsdangerous", "serialiser", "signing", "jwt"]
categories = ["cryptography", "authentication"]
repository = "https://github.com/KJHJason/hmac-serialiser-rs"
license = "MIT"
edition = "2021"

[dependencies]
rand = "0.8.5"
sha2 = "0.10.8"
hmac = "0.12.1"
sha1 = "0.10.6"
hkdf = "0.12.4"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
