[package]
name = "hmac-serialiser"
version = "0.3.1"
description = "HMAC Serialisers to cryptographically sign data like Python's ItsDangerous library but in rust."
authors = [
    "KJHJason <contact@kjhjason.com>",
]
keywords = ["hmac", "itsdangerous", "serialiser", "signing", "jwt"]
categories = ["cryptography", "authentication"]
repository = "https://github.com/KJHJason/hmac-serialiser/tree/master/rust"
license = "MIT"
edition = "2021"

[features]
default = ["rust_crypto"]
rust_crypto = ["sha1", "sha2", "hkdf", "hmac"]
ring = ["dep:ring"]

[dependencies]
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.8", optional = true }
hkdf = { version = "0.12.4", optional = true }
hmac = { version = "0.12.1", optional = true }
ring = { version = "0.17.8", optional = true }
base64 = "0.22.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
chrono = "0.4.38"
thiserror = "1.0.61"

[dev-dependencies]
rand = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }

[[test]]
path = "tests/hmac_random.rs"
name = "hmac_random"

[[test]]
path = "tests/hkdf_random.rs"
name = "hkdf_random"
